--- a/example/index.html
+++ b/example/index.html
@@ -10,9 +10,10 @@
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
+
 <div class="wp-block-stl-renderer-stl-model" id="model" style="width: 500px; height: 500px"> </div>
 <script>
-	STLHandler("globe-east-hollow.stl", "model")
+	const stlHandler = new STLHandler("headv7.stl", "model", {"initZoom": 3.6})
 </script>
 </body>
 </html>
